--- a/package.json
+++ b/package.json
@@ -10,13 +10,17 @@
     "gatsby-plugin-offline": "^2.0.5",
     "gatsby-plugin-react-helmet": "^3.0.0",
     "gatsby-plugin-sharp": "^2.0.7",
+    "gatsby-plugin-typography": "^2.2.1",
     "gatsby-source-filesystem": "^2.0.6",
     "gatsby-transformer-json": "^2.1.5",
     "gatsby-transformer-sharp": "^2.1.4",
     "react": "^16.5.1",
     "react-dom": "^16.5.1",
     "react-helmet": "^5.2.0",
-    "react-materialize": "^2.4.8"
+    "react-materialize": "^2.4.8",
+    "react-typography": "^0.16.13",
+    "typography": "^0.16.17",
+    "typography-theme-kirkham": "^0.16.3"
   },
   "keywords": [
     "gatsby"
